--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: "BSOS 233: Data Science for Social Sciences"
-description: "The course website for BSOS 233.""
+description: "The course website for BSOS 233."
