Updates to site layout.

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-slate
 title: "BSOS 233: Data Science for Social Sciences"
 description: "The course website for BSOS 233.
 
