--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
 theme: jekyll-theme-slate
 title: "BSOS 233: Data Science for Social Sciences"
-description: "The course website for BSOS 233.
-
-Link to JupyterHub: https://jupyter.bsos233.org"
+description: "The course website for BSOS 233."
